--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
 
 <!--INIZIO CSS-->
-<link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/main.min.css" rel="stylesheet">
-<link rel="preload" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/main2.min.css" as="style">
-<link rel="stylesheet" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/main2.min.css" media="print" onload="this.media='all'">
-<!--SFANCULIZZA IL content-multimedia-->
-<link rel="stylesheet" href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/carousel.css">
-<link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/photoFlip.css" rel="stylesheet">
-<link href="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/css/fonts.css" rel="stylesheet">
+<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main.min.css" rel="stylesheet">
+<!-- DEVO VEDERE QUALE ELEMENTO FA ALLARGARE LO SPAZIO NEL CAROUSEL NELLA VISIONE IPAD-->
+<link rel="preload" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main2.min.css" as="style">
+<link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main2.min.css" media="print" onload="this.media='all'">
+
+<link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/carousel.css">
+<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/photoFlip.css" rel="stylesheet">
+<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/fonts.css" rel="stylesheet">
 <!--FINE CSS-->
 
 <style data-c-focus-control></style>
@@ -2069,7 +2070,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-
+<!--  TUTTI I DISPOSITIVI merge con i pallini caricamento
 
   <section
     class="l-section l-section--has-subsection c-tabs"
@@ -2090,8 +2091,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p class="cta-grid__copy-item text-normal">Le mie esperienze sui vari devices.</p>
       </div>
 
-    <!--DA QUI, DEVO CAPIRE COSA NON FA PARTIRE IL TIMER-->
-    <!--QUESTA NO-->
+
+
   <div class="c-tabs-nav "
     data-active-item="1"
     data-default-key="0"
@@ -2192,9 +2193,9 @@ data-ca-label="tv">
 
 
 
-      <!--PHONE DESCRIZIONE-->
 
-        <!--  <div
+
+         <div
             class="l-section l-section--text-and-media l-section--text-and-media-os-tabs l-section--no-padding c-tabs__section"
             aria-hidden="false"
             id="most-popular-devices-panel-phone"
@@ -2237,14 +2238,13 @@ data-ca-label="tv">
                 </div>
               </div>
             </div>
-          </div>-->
+          </div>
 
 
 
 
 
 
-<!--SMARTPHONE-->
 <div
   class="l-section l-section--text-and-media l-section--text-and-media-os-tabs l-section--no-padding c-tabs__section"
   aria-hidden="false"
@@ -2261,10 +2261,10 @@ data-ca-label="tv">
 
 
 
-      <!--CONTENITORE PULSANTI E TUTTO IL RESTO-->
+
     <div class="content-multimedia__wrapper grid2"          data-android-component="tab-timer">
 
-     <!--PULSANTI-->
+
         <div class="content-multimedia__timer-wrapper">  <div role="tablist"aria-label="q-gesture-navigation-timer"    aria-orientation="vertical"
     class="tab-timer__tablist">
 
@@ -2319,10 +2319,10 @@ data-ca-label="tv">
 
 
 
-    <!--SMARTPHONE IMMAGINI-->
+
     <div class="content-multimedia__media-wrapper">
 
-       <!--SMARTOPHONE - PRIMA IMMAGINE-->
+
           <div class="tab-timer__panel
             tab-timer__panel--q-gesture-navigation
           "
@@ -2403,7 +2403,7 @@ data-ca-label="tv">
 
 
 
-      <!--SMARTPHONE - SECONDA IMMAGINE-->
+
           <div class="tab-timer__panel
             tab-timer__panel--q-gesture-navigation
           hidden"
@@ -2481,7 +2481,7 @@ data-ca-label="tv">
 
 
 
-      <!--SMARTPHONE - TERZA IMMAGINE -->
+
             <div class="tab-timer__panel
             tab-timer__panel--q-gesture-navigation
             hidden"
@@ -2574,7 +2574,7 @@ data-ca-label="tv">
 
 
 
-      <!--SMARTPHONE DESCRIZIONE-->
+
 
           <div class="content-multimedia__copy-wrapper">
 
@@ -2658,7 +2658,7 @@ data-ca-label="tv">
 
 
 
-<!--WEAR-->
+
 
           <div
             class="l-section l-section--text-and-media l-section--text-and-media-os-tabs l-section--no-padding c-tabs__section"
@@ -2674,8 +2674,7 @@ data-ca-label="tv">
 
                     </div>
                 </div>
-              </div><!--
-             -->
+              </div>
 
 
              <div class="grid__item desktop--four-twelfths tablet--one-whole" style="">
@@ -2703,7 +2702,6 @@ data-ca-label="tv">
 
 
 
-<!--TABLET-->
           <div
             class="l-section l-section--text-and-media l-section--text-and-media-os-tabs l-section--no-padding c-tabs__section"
             aria-hidden="true"
@@ -2722,8 +2720,8 @@ data-ca-label="tv">
                           </video>
                     </div>
                 </div>
-              </div><!--
-             --><div class="grid__item desktop--four-twelfths tablet--one-whole">
+              </div>
+            <div class="grid__item desktop--four-twelfths tablet--one-whole">
                 <div class="l-section__text cascade-text">
                   <h3 class="cta-grid__copy-item beta cascade-text__item">Tablet</h3>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">Un tablet computer (più semplicemente tablet), letteralmente traducibile come “elaboratore tabulare” o “tavoletta elaboratrice”, è una delle varianti dei tablet PC, caratterizzati da dimensioni compatte e che utilizzano come input principale uno schermo controllato da una penna o tramite dita invece che una tastiera e un mouse.
@@ -2739,8 +2737,6 @@ data-ca-label="tv">
           </div>
 
 
-
-<!--PC-->
           <div
             class="l-section l-section--text-and-media l-section--text-and-media-os-tabs l-section--no-padding c-tabs__section"
             aria-hidden="true"
@@ -2759,8 +2755,8 @@ data-ca-label="tv">
                           </video>
                     </div>
                 </div>
-              </div><!--
-             --><div class="grid__item desktop--four-twelfths tablet--one-whole">
+              </div>
+             <div class="grid__item desktop--four-twelfths tablet--one-whole">
                 <div class="l-section__text cascade-text">
                   <h3 class="cta-grid__copy-item beta cascade-text__item">Computer</h3>
                   <p class="cta-grid__copy-item text-normal cascade-text__item">
@@ -2785,9 +2781,7 @@ data-ca-label="tv">
       </div>
     </div>
   </section>
-
-
-
+-->
 
 
    <!--INIZIO COMPETENZE SU TUTTI I DISPOSITIVI-->
@@ -3083,7 +3077,7 @@ data-ca-label="tv">
     </div>
   </section>
 
-  <!--FINE COMPETENZE-->
+  <!--FINE COMPETENZE su tutti i dispositivi-->
 
 
 
@@ -3669,15 +3663,16 @@ data-ca-label="tv">
         </div>
         <div class="apps-carousel__dynamic-items">
               <div id="carousel-apps-items-phones-popular">
+                <!--Primo progetto-->
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.duolingo" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Duolingo">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_1x.jpg" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_2x.jpg 2x"/>
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.duolingo" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Duolingo">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             EasyTicket Client
@@ -3686,16 +3681,16 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
-
+            <!--Secondo-->
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.google.android.music" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Google Play Music">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-google-play-music_1x.jpg" srcset="/static/2016/img/apps-carousel/phones-google-play-music_2x.jpg 2x" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-google-play-music_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/phones-google-play-music_2x.jpg 2x" />
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.google.android.music" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Google Play Music">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/google-play-music_1x.png" srcset="../../static/2016/img/apps-carousel/icons/google-play-music_2x.png 2x">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/google-play-music_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/google-play-music_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item  bg-list__ apps-carousel__item-description-link">
                             EasyTicket Operator
@@ -3704,15 +3699,16 @@ data-ca-label="tv">
                       </div>
                     </div>
                   </div>
+
                   <div class="apps-carousel__item apps-carousel__item--phones">
                     <div class="apps-carousel__item-inner">
                       <a class="apps-carousel__item-img-wrap" href="https://play.google.com/store/apps/details?id=com.duolingo" target="_blank" tabindex="-1" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Duolingo">
-                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_1x.jpg" />
+                        <img alt="" class="apps-carousel__item-img" src="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_1x.jpg" srcset="https://www.android.com/static/2016/img/apps-carousel/phones-duolingo_2x.jpg 2x"/>
                       </a>
                       <div class="apps-carousel__item-description">
                         <a class="" href="https://play.google.com/store/apps/details?id=com.duolingo" target="_blank" data-g-event="apps-carousel" data-g-action="store-link-clicked" data-g-label="Duolingo">
                           <div class="apps-carousel__item-description-icon-link">
-                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png">
+                            <img alt="" role="presentation" class="apps-carousel__item-description-icon" src="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_1x.png" srcset="https://www.android.com/static/2016/img/apps-carousel/icons/duolingo_2x.png 2x">
                           </div>
                           <div class="cta-grid__copy-item apps-carousel__item-description-link">
                             EasyTicket Client
@@ -6222,15 +6218,15 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
 
                 <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/didattica/Plinio1.jpeg" alt="" style=" width:100%;" >
               </a>
-              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/certificati/NASA.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Discover ways to get the most out of your Android device">
+              <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Apple teacher certification">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Certificato</span>
-                    <span class="c-blocks__item-category">NASA</span>
+                    <span class="c-blocks__item-category">Apple Teacher</span>
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/NASA.jpg" alt="" style="height:100%; margin-left:-7%; margin-top:-1.3%">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher" style="height:100%;">
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/gif/virtualReality.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Swip3 by Unit 9">
                 <div class="c-blocks__item-inner">
@@ -6240,17 +6236,17 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/gif/virtualReality.png" alt="" style="width:100%; margin-top:-15%">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/gif/virtualReality.png" alt="" style="width:100%;">
               </a>
-              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.pdf" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Take the hassle out buying music, games, and more">
+              <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/certificati/NASA.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Nasa certification">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
                     <span class="c-blocks__item-title">Certificato</span>
-                    <span class="c-blocks__item-category">Apple Teacher</span>
+                    <span class="c-blocks__item-category">NASA</span>
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher"  style=" height:100%; margin-left:-7%">
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/certificati/NASA.jpg" alt="NASA"  style=" height:100%;">
               </a>
               <a class="cascade-content__item c-blocks__item" href="http://www.mauriziominieri.it/gif/battlebash.jpg" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Embrace your inner Gaming Hero">
                 <div class="c-blocks__item-inner">
@@ -6270,13 +6266,13 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/didattica/titoLivio1.jpeg" alt="" style="width:100%; margin-top:-20%" >
+                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/didattica/titoLivio1.jpeg" alt="" style="width:100%;" >
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
                 <div class="c-blocks__item-inner">
                   <div class="c-blocks__item-body">
-                    <span class="c-blocks__item-title">Sono tornato nella mia vecchia scuola media... ma da professore</span>
-                    <span class="c-blocks__item-category">Tito Livio</span>
+                    <span class="c-blocks__item-title">Bo</span>
+                    <span class="c-blocks__item-category">Bo</span>
                   </div>
                 </div>
 
