--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 
 
 <!--INIZIO CSS-->
-<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main.min.css" rel="stylesheet">
-<!-- DEVO VEDERE QUALE ELEMENTO FA ALLARGARE LO SPAZIO NEL CAROUSEL NELLA VISIONE IPAD-->
-<link rel="preload" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main2.min.css" as="style">
-<link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/main2.min.css" media="print" onload="this.media='all'">
+<link href="/static/2016/css/main.min.css" rel="stylesheet">
+<link rel="preload" href="/static/2016/css/main2.min.css" as="style">
+<link rel="stylesheet" href="/static/2016/css/main2.min.css" media="print" onload="this.media='all'">
 
 <link rel="stylesheet" href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/carousel.css">
 <link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2016/css/photoFlip.css" rel="stylesheet">
