--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Maurizio Minieri</title>
     <link rel = "icon"
-    href = "static/2020/img/incons/logoM.png"
+    href = "http://www.mauriziominieri.it/static/2020/img/incons/logoM.png"
     type = "image/x-icon">
 
 <!--INIZIO Personal-->
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         </a>
       </div>
-<form action="file:///Users/mauriziominieri/websites/www.maurizio.com/intl/it_it/index.html" class="c-search" data-c-search id="search" method="get">
+<form action="http://www.maurizio.it/index.html" class="c-search" data-c-search id="search" method="get">
   <label for="q">Cerca</label>
   <input autocomplete="off" id="q" name="q" placeholder="Cerca" type="text" value="">
   <button aria-label="Cerca" class="btn btn--search" type="submit"><!--
