--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <link href="http://www.mauriziominieri.it/static/2020/css/main.min.css" rel="stylesheet">
 <link rel="preload" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" as="style">
 <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="/static/2016/css/carousel.css">
-<link href="/static/2016/css/photoFlip.css" rel="stylesheet">
-<link href="/static/2016/css/fonts.css" rel="stylesheet">
+<link rel="stylesheet" href="/static/2020/css/carousel.css">
+<link href="/static/2020/css/photoFlip.css" rel="stylesheet">
+<link href="/static/2020/css/fonts.css" rel="stylesheet">
 <!--FINE CSS-->
 
 <style data-c-focus-control></style>
@@ -672,13 +672,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <img
     id="animation-image-0"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/black-mirror-black2.png"
+    src="/static/2020/img/home/black-mirror-black2.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
 </img>
 <img
     id="animation-image-0"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/black-mirror-white2.png"
+    src="/static/2020/img/home/black-mirror-white2.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
 </img>
@@ -731,7 +731,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <img
           id="animation-image-1"
-          src="http://www.mauriziominieri.it/loghi/android1-dark.png"
+          src="/static/2020/img/home/android1-dark.png"
           alt="Android dark"
           class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
       </img>
@@ -743,7 +743,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           lg="190"
           xl="281"
           cache-ttl="e365">
-          <img src="http://www.mauriziominieri.it/loghi/android1-light.png" alt="Android light">
+          <img src="static/2020/img/home/android1-light.png" alt="Android light">
        </cloud-image>
 
 
