--- a/index.html
+++ b/index.html
@@ -6598,12 +6598,12 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
 
 
 
-  <script src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/pageControlMove.js"></script>
-  <script defer src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/android10.js"></script>
+  <script src="/static/2020/js/pageControlMove.js"></script>
+  <script defer src="/static/2020/js/android10.js"></script>
 
 
-  <script defer src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/myCarousel.js"></script>
-  <script type='text/javascript' src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/myCarousel2.js"></script>
+  <script defer src="/static/2020/js/myCarousel.js"></script>
+  <script type='text/javascript' src="/static/2020/js/myCarousel2.js"></script>
 
    <script type="application/ld+json">
    {
@@ -6645,9 +6645,9 @@ centrati verticalmente in DIV2 uno a destra e l'altro a sinistra???-->
    }
    </script>
 
-  <script src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/main.min.js"></script>
-  <script src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/main2.min.js"></script>
-  <script src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/js/main3.min.js"></script>
+  <script src="/static/2020/js/main.min.js"></script>
+  <script src="/static/2020/js/main2.min.js"></script>
+  <script src="/static/2020/js/main3.min.js"></script>
 
   <script>
   android.init();
