--- a/index.html
+++ b/index.html
@@ -792,13 +792,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <img
     id="animation-image-2"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/robot-arm-light.png"
+    src="/static/2020/img/home/robot-arm-light.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
 </img>
 <img
     id="animation-image-2"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/robot-arm.png"
+    src="/static/2020/img/home/robot-arm.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
 </img>
@@ -847,13 +847,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <img
     id="animation-image-3A"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/joypad-ps-white.png"
+    src="/static/2020/img/home/joypad-ps-white.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
 </img>
 <img
     id="animation-image-3"
-    src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/joypad-ps-black2.png"
+    src="http://www.mauriziominieri.it/static/2020/img/home/joypad-ps-black2.png"
     alt="iphone dark"
     class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
 </img>
