didattica.html added

--- a/index.html
+++ b/index.html
@@ -902,15 +902,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <img
             id="animation-image-4"
-            src="http://www.mauriziominieri.it/certificati/PNG/AppleTeacher_black.png"
+            src="http://www.mauriziominieri.it/static/2020/certificati/AppleTeacher_black.png"
             alt="Apple Teacher dark"
             class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
         </img>
 
 
-        <img onclick="window.open('http://www.mauriziominieri.it/certificati/CertificatoAppleTeacher.pdf')"
+        <img onclick="window.open('http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.pdf')"
             id="animation-image-4"
-            src="http://www.mauriziominieri.it/certificati/PNG/AppleTeacher_white.png"
+            src="http://www.mauriziominieri.it/static/2020/certificati/AppleTeacher_white.png"
             alt="Apple Teacher light"
             class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
         </img>
@@ -978,13 +978,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                <img
                    id="animation-image-5"
-                   src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/guitar-green.png"
+                   src="http://www.maurizio.it/static/2020/img/home/guitar-green.png"
                    alt="iphone dark"
                    class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
                </img>
                <img
                    id="animation-image-5"
-                   src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/guitar-blue.png"
+                   src="http://www.maurizio.it/static/2020/img/home/guitar-blue.png"
                    alt="iphone dark"
                    class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
                </img>
@@ -1031,7 +1031,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <img
       id="animation-image-6"
-      src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/iphone.png"
+      src="/static/2020/img/home/iphone.png"
       alt="iphone dark"
       class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
   </img>
@@ -1079,13 +1079,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </cloud-image>-->
   <img
       id="animation-image-7"
-      src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/rubik-cube-dark.png"
+      src="/static/2020/img/home/rubik-cube-dark.png"
       alt="iphone dark"
       class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
   </img>
   <img
       id="animation-image-7"
-      src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/home/rubik-cube.png"
+      src="/static/2020/img/home/rubik-cube.png"
       alt="iphone dark"
       class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
   </img>
@@ -1329,7 +1329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </li>
 
                   <li>
-                    <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-scuola.png"  style="vertical-align: middle; margin-right:10px;" height="50" width="50">
+                    <img src="/static/2020/img/icons/icon-scuola.png"  style="vertical-align: middle; margin-right:10px;" height="50" width="50">
                   </img>
                       <div style=" display: inline-block; vertical-align: middle;">
                      <span class="cta-grid__copy-item is-copy-m">
@@ -1408,203 +1408,203 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">iMovie</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-imovie.png"/>
+      <img src="/static/2020/img/icons/icon-imovie.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Sketch</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-sketch.png"/>
+        <img src="/static/2020/img/icons/icon-sketch.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Camtasia</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_camtasia.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-camtasia.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Filmora</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-filmora.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-filmora.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Latex</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_latex.png" />
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon_latex.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Adobe Photoshop</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-photoshop.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-photoshop.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Adobe Premiere</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-premiere.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-premiere.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Balsamiq</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-balsamiq.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-balsamiq.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Marvel</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-marvel.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-marvel.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Axure</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-axure.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-axure.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Matlab</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-matlab.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-matlab.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">R</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-r.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-r.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">PowerPoint</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_powerpoint.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon_power-point.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Excel</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-excel.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-excel.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Word</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_word.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-word.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Pspice</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_pspice.png" />
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-pspice.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Packet Tracer</div>
-      <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-packet-tracer.png"/>
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons//icon-packet-tracer.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">StarUML</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_staruml.png" />
+        <img src="/static/2020/img/icons/icon-staruml.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Flowgorithm</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-flowgorithm.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-flowgorithm.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Scratch</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_scratch.png" />
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-scratch.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Thunkable</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-thunkable.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-thunkable.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Thymio VPL</div>
-          <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-vpl.png"/>
+          <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-vpl.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Cyberduck</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-cyberduck.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-cyberduck.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Filezilla</div>
-        <img src="http://www.mauriziominieri.it/loghi/logo_filezilla.png" />
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-filezilla.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">XAMPP</div>
-      <img src="http://www.mauriziominieri.it/loghi/logo_xampp.png" />
+      <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-xampp.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Keynote</div>
-        <img src="http://www.mauriziominieri.it/loghi/icon_keynote.png" />
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/keynote.png" />
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Pages</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-pages.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-pages.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Garageband</div>
-        <img src="file:///Users/mauriziominieri/websites/www.maurizio.com/static/2016/img/icons/icon-garageband.png"/>
+        <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-garageband.png"/>
     </a>
   </li>
   <li class="cards-grid__item">
     <a class="cards-grid__item-wrapper"
       href="" target="_blank">
       <div class="cards-grid__item-heading is-7">Numbers</div>
-         <img src="http://www.mauriziominieri.it/loghi/icon_numbers.jpg" />
+         <img src="http://www.mauriziominieri.it/static/2020/img/icons/icon-numbers.jpg" />
     </a>
   </li>
 
