--- a/index.html
+++ b/index.html
@@ -978,13 +978,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                <img
                    id="animation-image-5"
-                   src="http://www.maurizio.it/static/2020/img/home/guitar-green.png"
+                   src="http://www.mauriziominieri.it/static/2020/img/home/guitar-green.png"
                    alt="iphone dark"
                    class="hero-devices__image hero-devices__image-0 cloud-image--portrait">
                </img>
                <img
                    id="animation-image-5"
-                   src="http://www.maurizio.it/static/2020/img/home/guitar-blue.png"
+                   src="http://www.mauriziominieri.it/static/2020/img/home/guitar-blue.png"
                    alt="iphone dark"
                    class="hero-devices__image hero-devices__image-1 cloud-image--portrait">
                </img>
