--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                     <div class="flipper">
-                    <div id="myfoto" class="front" style="background: url(https://www.mauriziominieri.it/ProfiloLaurea2.jpg) 0 0 no-repeat;">
+                    <div id="myfoto" class="front" style="background: url(http://www.mauriziominieri.it/static/2020/img/ProfiloLaurea2.jpg) 0 0 no-repeat;">
 
                     <span class="name">MaurizioMinieri</span>
 
