--- a/index.html
+++ b/index.html
@@ -434,12 +434,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <span class="icon icon--caret"></span>
                 <ul aria-hidden="true" role="menu">
 <li>
-      <a href="http://www.mauriziominieri.it/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="android-10">
+      <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="android-10">
           <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Android10" class="icon icon--why-android" src="https://www.android.com/static/2016/img/icons/why-android/10_1x.png" srcset="/static/2016/img/icons/why-android/10_2x.png 2x" height="100" width="100">
 </span>Curriculum</a>
     </li>
 <li>
-      <a href="http://www.mauriziominieri.it/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="play">
+      <a href="http://www.mauriziominieri.it/static/2020/certificati/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="play">
           <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Play" class="icon icon--why-android" src="https://www.android.com/static/2016/img/icons/why-android/play_1x.png" srcset="/static/2016/img/icons/why-android/play_2x.png 2x" height="100" width="100">
 </span>Biglietto da visita</a>
     </li>
@@ -1281,8 +1281,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <p class="cta-grid__copy-item text-normal cascade-text__item">
 
                 Ciao, mi presento, sono Maurizio Minieri.<br><br>
-                Fin da piccolo mi ha sempre incuriosito il meccanismo che risiede nelle cose, ero il bambino che smontava i propri regali costosi per vedere come funzionavano piuttosto
-                che giocarci, inoltre la grande passione per i videogiochi negli anni è cresciuta sempre più
+                Fin da piccolo mi ha sempre incuriosito il meccanismo che risiede nelle cose, ero il bambino che smontava i propri giocattoli costosi per vedere come funzionavano piuttosto
+                che usarli, inoltre la grande passione per i videogiochi negli anni è cresciuta sempre più
                 e dopo aver frequentato un liceo scientifico sperimentale mi sono iscritto all'università di Napoli Federico II, immergendomi in questo vasto e fantastico mondo: <b class="">L'INFORMATICA</b>.
                 Mi incuriosisce e affascina come essa possa essere presente in ogni oggetto della vita, immagino un futuro con
                 videogiochi incredibilmente immersivi, videochiamate olografiche, macchine che si guidano, case che si puliscono, fornelli che cucinano, autonomamente.
@@ -1291,7 +1291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <br><br>
 
 
-                <a href="http://mauriziominieri.it/download/PresentazioneManusVRMinieriCut.mp4"
+                <a href="http://mauriziominieri.it/static/2020/videos/PresentazioneManusVRMinieriCut.mp4"
                 class="cta cta--is-2"
                 aria-label="Try it now: Sound Amplifier"      target="_blank"
                   rel="noopener"
